    doesn't contain any useful information.
  * Re-enable package build-time test suite.
  * Run the python2.7 dh_python2 tests in an autopkgtest.
  * Replaced references to python with python2.7 in the test suite
    (closes: 956191)
  * Update pydist fallback database.
  * Recognise Debian-packaged python modules from .dist-info directories as
    well as .egg-info.

 -- Piotr Ożarowski <piotr@debian.org>  Wed, 04 Nov 2020 11:46:16 +0100

dh-python (4.20201102+nmu1) unstable; urgency=medium

  * Non-maintainer upload
  * Don't fail tests just because the default python gets hardcoded
    (Closes: #975536)

 -- Paul Gevers <elbrus@debian.org>  Sat, 27 Feb 2021 19:51:37 +0100

dh-python (4.20201102) unstable; urgency=medium

  [ Antonio Terceiro ]
  * pybuild's Flit plugin: don't crash on ill-formed pyproject.toml

  [ Piotr Ożarowski ]
  * Remove now deprecated allow_hosts=None from autogenerated .pydistutils.cfg
    file (closes: 970524)
  * Try to build/test other interpreters/versions even if one of them fails to
    make build logs a bit more verbose (closes: 943334)
  * Remove .pytest_cache and .coverage in pybuild's clean step (closes: 967898)
    Custom plugins now invoke Base.clean() as well (i.e. PyTest files,
    build dir and all .pyc files are removed like in other plugins)

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 02 Nov 2020 22:58:27 +0100

dh-python (4.20200925) unstable; urgency=medium

  * Add Breaks/Replaces python2 to ease upgrades with python2 (closes: 968046)
  * Disable Python 2.X tests by default (closes: 968193)

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 25 Sep 2020 12:35:52 +0200

dh-python (4.20200804) unstable; urgency=medium

  [ Scott Kitterman ]
  * Add new pybuild plugin to enable flit built packages to build using
    pyproject.toml instead of distutils/setuptools setup.py
  * Update dh-python for removal of python3.7 from supported python3 versions
    (closes: #956190)