@@ -8,6 +8,7 @@ check:
 	grep -q ^foo.py, $(DI)/RECORD
 	test ! -f $(DI)/direct_url.json
 	grep -L ^foo-0.1.dist-info/direct_url.json, $(DI)/RECORD | grep -q RECORD
+	grep -q 'Depends:.*python3-toml' debian/python3-foo/DEBIAN/control
 
 clean:
 	./debian/rules clean
