@@ -20,6 +20,8 @@ dh-python (4.20201104) UNRELEASED; urgency=medium
   * Update pydist fallback database.
   * Recognise Debian-packaged python modules from .dist-info directories as
     well as .egg-info.
+  * Generate python3:Depends from Requires-Dist entries in .dist-info (e.g.
+    flit packages). (closes: 987296
 
  -- Piotr Ożarowski <piotr@debian.org>  Wed, 04 Nov 2020 11:46:16 +0100
 
